<resources>
    <string name="app_name">OWAY</string>
    <string name="action_settings">Settings</string>
    <string name="something_went_wrong">Something Went Wrong !!</string>
    <string name="internet_check">Please check your internet connection</string>
    <string name="some_error">Some Error occured</string>
    <string name="tv_login">Login</string>
    <string name="tv_next">Next</string>

    <string name="validate_name">Please enter user name</string>
    <string name="validate_password">Please enter password</string>
    <string name="FACEBOOK_APP_ID">658871691141399</string>
    <string name="seat_validation">Please select Car seat first</string>

    <string name="dummy_upline_id">EKL0000000</string>
    <string name="phone_string">PHONE NUMBER</string>
    <string name="google_key">AIzaSyA5SxZFlAfeBQjNXFBn5CQAzyok5HxXxY4</string>

    <string name="ACCOUNT_KIT_CLIENT_TOKEN">7dd46ce0e21eed587d5aff96030a61ee</string>
    <string name="ak_login_protocol_scheme">ak658871691141399</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="register">Register Now</string>
    <string name="otu_account">I have otu account</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="name">Nama Lengkep</string>
    <string name="reg">Lanjutkan</string>
    <string name="profile_photo">Photo Profile</string>
    <string name="pic_content">Tambehkan</string>
    <string name="pic_content_two">Photo Profile Anda</string>
    <string name="sponsorID">ID Sponsor</string>
    <string name="tv_phone">Phone</string>
    <string name="tv_selemat">Selamat datang di OWAI</string>
    <string name="tv_driver">Driver is riding to you...</string>

    <string name="tv_no_record">No Record Found</string>

    <string name="tv_register_payment">Register Payment</string>

    <string name="tv_register_now">Register Now</string>

    <string name="tv_phone_hint">Masukan Nomor HP</string>

    <string name="sponsorHint">Masukan Kode ID</string>
    <string name="mail">Email</string>
    <string name="mailHint">xxxx@mail.com</string>
    <string name="password">Password</string>
    <string name="userName">User Name</string>

    <string name="passwordHint">Minimal 8 character</string>
    <string name="pin">PIN</string>
    <string name="pinHint">Masukan 6 Digit Angka</string>
    <string name="alamat">Alamat</string>
    <string name="alamatHint">Alamat Rumah</string>
    <string name="kota">Kota</string>
    <string name="propinsi">Propinsi</string>
    <string name="propinsiHint">Propinsi Lokasi</string>
    <string name="kotaHint">Kota Lokasi</string>

    <!--
    Registration Validations
-->
    <string name="validate_sponsorId">Please Enter Sponsor Id</string>
    <string name="validate_email">Please Enter Email</string>
    <string name="validate_pin">Please Enter PIN </string>
    <string name="validate_alamat">Please Enter Alamat Rumah</string>
    <string name="validate_kota">Please Enter Kota Lokasi</string>
    <string name="validate_propinsi">Please Enter Propinsi Lokasi</string>
    <string name="validate_phonenumber">Please Enter Phone Number</string>

    <!-- validation trip activity-->
    <string name="validation_pick_up">Please enter Pick Up Address</string>
    <string name="validation_drop_off">Please enter Drop Off Address</string>

    <!--Slider -->
    <string name="coming_soon">Coming Soon !!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_dashboard">DashBoard</string>
    <string name="tv_profile">User Profile</string>
    <string name="tv_requestie">Requisite &amp; Certain</string>
    <string name="tv_privacy_policy">Privacy Policy</string>
    <string name="tv_faq">Faq</string>
    <string name="tv_app_rate">App Rate</string>
    <string name="tv_logout">Logout</string>
    <string name="tv_logout_text">Are you sure you want to Logout?</string>
    <!--bootom Navigation drawer -->
    <string name="tv_home">Home</string>
    <string name="tv_activity">Activity</string>
    <string name="tv_payment">Payment</string>
    <string name="tv_account">Account</string>
    <!-- register_now-->
    <string name="regText">Bayar Transportasi di OWAI den beli makanan\nlebih mudah dengan saldo OTU</string>
    <string name="reg_ups">UPS!</string>
    <string name="reg_text_two">Supertinya Anda belum punya akun OTU</string>
    <string name="reg_text_bottom">Sebentar lagi anda akan masuk di OTU ZONE\n\"Ayo registrasi sekarang,aktifkan saldo OTU mu\"
    </string>
    <!--dashboard -->
    <string name="tv_otu">OTU Saldo</string>
    <string name="goodDay">Have a good day ...</string>
    <string name="login_choice">HAVE ACCOUNT</string>
    <string name="signUp_Choice">Dont Have Account</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="tv_register">Register</string>

    <string name="loginScreenContent">Gunakan password akun OTU anda</string>
    <string name="phone">Phone</string>

    <string name="loginScreenContentTop">hallo JHON KEY, selamat datang kembali ...</string>
    <string name="dashboard">Rp 1,000,000</string>
    <string name="topUp">TOP UP</string>
    <string name="dashboard_text">Bonus Rp 1.234.567.890</string>
    <string name="verification">Verification With Facebook</string>
    <string name="cash">CASH</string>
    <string name="pay_with">Pay with?</string>
    <string name="tv_rates">Rates do not include tool fees and others</string>
    <string name="saldo">SALDO</string>
    <string name="order">ORDER</string>
    <string name="cencel">CENCEL</string>
    <string name="get_saldo_off">Get discount with OTU saldo</string>
    <string name="wait">Please wait ...</string>
    <string name="findingDriver">Now We\'re Finding your Driver</string>
    <string name="got_driver">You got a driver</string>
    <string name="driver_name">Mamang Asep</string>
    <string name="driver_car">Honda bebek (hitam)</string>
    <string name="car_number">EK 555 P</string>
    <string name="estimate_time">Time estimation 5 Menit</string>
    <string name="cancel_question">Why you cancel this order?</string>
    <string name="cancel_reason_one">I can\'t find my driver</string>
    <string name="cancel_reason_two">I have wrong submit destination</string>
    <string name="cancel_reason_three">Driver is too late</string>
    <string name="other">Others</string>
    <string name="notes_reason">Send some reason why you cancel this order</string>
    <string name="notes">1.5 to 2 Jam</string>

    <!--Login -->
    <string name="logged_in">Login Successfully</string>
    <string name="search">Search Location</string>
    <string name="confirm">CONFIRM</string>
    <string name="history">View History</string>
    <string name="latest_activity">Latest Activity</string>
    <string name="on_going">Ongoing</string>
    <string name="no_activity">No Activity here</string>
    <string name="recomendations">Our recomendation</string>
    <string name="install">Install</string>
    <string name="more">More</string>
    <string name="profile_name">JHON KEY</string>
    <string name="phone_num">0812243345</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="help">Help Center</string>
    <string name="emergency">Emergency call</string>
    <string name="rate">Rate apps</string>
    <string name="report">Report service</string>
    <string name="logout">Logout acoount</string>
    <string name="save">Save</string>
    <string name="tv_nama">Nama</string>
    <string name="terms"><![CDATA[Terms & Condition]]></string>
    <string name="web">OWAI Web</string>
    <string name="tutorial">Tutorial</string>
    <string name="push_notify">Push Notification</string>
    <string name="sms">SMS</string>
    <string name="food">Food</string>
    <string name="car">Car</string>
    <string name="ride">Ride</string>
    <string name="bt_logout">Logout Now</string>
    <string name="close">Close</string>
    <string name="attention">Attention!</string>
    <string name="read_agreement">You need to read agreement</string>
    <string name="terms_and_conditions">Terms &amp; Conditions\nLorem ipsum dolor sit amet, consectetur adipiscing\nelit, sed doeiusmod tempor incididunt ut labore et\ndolore magna aliqua. Ut enim ad minim veniam,\nquis nostrud exercitation ullamco laboris nisi ut\naliquip ex ea commodo consequat. Duis aute irure\ndolor in reprehenderit in voluptate velit esse cillum\ndolore eu fugiat nulla pariatur. Excepteur sint\noccaecat cupidatat non proident, sunt in culpa\nqui officia deserunt mollit anim id est laborum.</string>
    <string name="understand">Yes,Understand</string>
    <string name="cancel">Cancel</string>
    <string name="tv_cash">Cash</string>
    <string name="tv_saldo">Saldo</string>

    <string name="colon">:</string>
    <string name="tujuan">Tujuan</string>
    <string name="jarak">Jarak tempuh</string>
    <string name="total">Total biaya</string>
    <string name="feedback">Give a feedback</string>
    <string name="dist">12 Km</string>
    <string name="amt">Rp 1209.0000</string>
    <string name="chat">Owai Messanger</string>
    <string name="typehere">Typing here</string>

</resources>
